--- a/admin/package.json
+++ b/admin/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sneat-bootstrap-.php-admin-template-free",
-  "description": "Most Powerful & Comprehensive Free Bootstrap 5 .php Admin Dashboard Template built for developers! 🚀",
+  "name": "sneat-bootstrap-html-admin-template-free",
+  "description": "Most Powerful & Comprehensive Free Bootstrap 5 html Admin Dashboard Template built for developers! 🚀",
   "license": "MIT",
   "version": "1.0.0",
   "author": {
@@ -8,14 +8,14 @@
     "url": "https://themeselection.com/"
   },
   "bugs": {
-    "url": "https://github.com/themeselection/sneat-.php-admin-template-free/issues"
+    "url": "https://github.com/themeselection/sneat-html-admin-template-free/issues"
   },
   "private": false,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/themeselection/sneat-.php-admin-template-free.git"
+    "url": "git+https://github.com/themeselection/sneat-html-admin-template-free.git"
   },
-  "homepage": "https://themeselection.com/products/sneat-free-bootstrap-.php-admin-template/",
+  "homepage": "https://themeselection.com/products/sneat-free-bootstrap-html-admin-template/",
   "keywords": [
     "bootstrap",
     "front-end",
@@ -80,7 +80,7 @@
     "gulp-useref": "^5.0.0",
     "gulp-dart-sass": "^1.0.2",
     "gulp-exec": "^5.0.0",
-    ".php-loader": "~0.5.5",
+    "html-loader": "~0.5.5",
     "js-beautify": "^1.10.3",
     "prettier": "^2.2.1",
     "sass-loader": "~8.0.0",
